# apps/api/src/modules/patients/presentation/http/patients.controller.ts
@@ -72,7 +72,8 @@ export class PatientsController {
       contactUnavailable: body.contactUnavailable,
       sex: body.sex,
       dateOfBirth: body.dateOfBirth,
-      nationalCode: body.nationalCode,
+      nationality: body.nationality,
+      identifierNumber: body.identifierNumber,
       province: body.province,
       city: body.city,
       district: body.district,
